--- a/calculator/index.html
+++ b/calculator/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="calculator.css" />
   </head>
   <body>
-    <h1 class="head">Вигідний кредит під 2,2% на день</h1>
+    <h1 class="head">Швидкий кредит під 2,2% на день</h1>
 
     <form class="login-form">
       <div class="wraper-box">
@@ -62,10 +62,12 @@
         /><br /><br />
       </div>
       <p class="result">
-        Щоденне погашення: <span id="result-day">0</span> грн
+        Щоденне погашення - <span id="result-day">0</span> грн
       </p>
 
-      <p class="result">Повне погашення: <span id="result-over">0</span> грн</p>
+      <p class="result">
+        Повне погашення - <span id="result-over">0</span> грн
+      </p>
       <div class="wrap-btn">
         <button type="submit" id="pass-credit" disabled>Отримати кредит</button>
       </div>
