--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="calculator.css" />
+    <link rel="stylesheet" href="calculator/calculator.css" />
   </head>
   <body>
     <h1 class="head">Швидкий кредит під 2,2% на день</h1>
@@ -72,6 +72,6 @@
         <button type="submit" id="pass-credit" disabled>Отримати кредит</button>
       </div>
     </form>
-    <script src="calculator.js" type="module"></script>
+    <script src="calculator/calculator.js" type="module"></script>
   </body>
 </html>
